# DorkariMED

./: .gitignore  architect.md  research.md  srs-module1.md  tech_lead_plan.md
pharmacy_marketplace/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  backend_progress.md  backend_review_report.md  design.md  development_progress.md  docker-compose.yml  frontend_progress.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_verification.py
pharmacy_marketplace/.github/workflows/: ci.yml
pharmacy_marketplace/accounts/: admin.py  models.py  serializers.py  tests.py  throttles.py  views.py
pharmacy_marketplace/accounts/migrations/: 0001_initial.py
pharmacy_marketplace/accounts/sms/: __init__.py  base.py  console.py  utils.py
pharmacy_marketplace/accounts/urls/: api.py  auth.py
pharmacy_marketplace/accounts/views/: web.py  (+1 more)
pharmacy_marketplace/catalog/: admin.py  models.py  serializers.py  tests.py  views.py
pharmacy_marketplace/core/: admin.py  exceptions.py  health.py  models.py  pagination.py  tests.py  urls.py  views.py
pharmacy_marketplace/flutter_app/: .metadata  README.md  pubspec.yaml
pharmacy_marketplace/notifications/: admin.py  models.py  serializers.py  tests.py  views.py
pharmacy_marketplace/pharmacies/: admin.py  apps.py  models.py  serializers.py  tests.py  validators.py  views.py
pharmacy_marketplace/pharmacy_marketplace/: asgi.py  urls.py  wsgi.py
pharmacy_marketplace/search/: admin.py  models.py  serializers.py  tests.py  views.py
pharmacy_marketplace/templates/: 404.html  500.html  base.html
(+73 files in other folders)
