[project]
name = "pharmacy_marketplace"
version = "0.1.0"
description = "Pharmacy & Medicine Discovery Platform — Module 1"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["run_verification.py", "**/migrations"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pharmacy_marketplace.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["."]
